[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[dev-dependencies]
risc0-zkvm = { git = "https://github.com/l2iterative/risc0-bigint" }

[build-dependencies]
risc0-build = { git = "https://github.com/l2iterative/risc0-bigint" }